--- a/unit03_mult_lin_reg/demo2_python_broadcasting.ipynb
+++ b/unit03_mult_lin_reg/demo2_python_broadcasting.ipynb
@@ -18,9 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np"
@@ -37,10 +35,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -66,10 +62,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -94,10 +88,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -120,10 +112,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -146,10 +136,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -204,10 +192,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Generate some random data\n",
@@ -244,10 +230,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "Xstd = np.std(X,axis=0)\n",
@@ -269,11 +253,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(100, 10, 2)\n",
+      "(100, 10)\n"
+     ]
+    }
+   ],
    "source": [
     "# Some random data\n",
     "nx = 100\n",
@@ -284,7 +275,9 @@
     "\n",
     "# Computing the distances in two lines.  No for loop!\n",
     "DXY = X[:,None,:]-Y[None,:,:]\n",
-    "d = np.sum(DXY**2,axis=2)"
+    "print(DXY.shape)\n",
+    "d = np.sum(DXY**2,axis=2)\n",
+    "print(d.shape)"
    ]
   },
   {
@@ -316,10 +309,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Some random data\n",
@@ -359,13 +350,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.11234902 0.19403142 0.90079235]\n",
+      " [0.12033349 0.9345122  0.79464419]\n",
+      " [0.49731652 0.29189994 0.36432688]\n",
+      " [0.4028824  0.72873971 0.36847361]]\n",
+      "[1.20717279 1.84948987 1.15354334 1.50009573]\n",
+      "[[0.09306788 0.1607321  0.74620001]\n",
+      " [0.06506307 0.50528106 0.42965587]\n",
+      " [0.4311208  0.25304635 0.31583285]\n",
+      " [0.26857113 0.48579547 0.2456334 ]]\n"
+     ]
+    }
+   ],
    "source": [
     "X = np.random.rand(4,3)\n",
+    "print(X)\n",
+    "sum_j = np.sum(X, axis=1)\n",
+    "print(sum_j)\n",
+    "Y = X / sum_j[:,None]\n",
+    "print(Y)\n",
     "# Y = ..."
    ]
   },
@@ -378,15 +388,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "X = np.random.rand(5,3)\n",
     "d = np.random.rand(5)\n",
-    "# Y = ..."
+    "d_d = np.diag(d)\n",
+    "print(d_d)\n",
+    "Y = np.dot(d_d, X)\n",
+    "print(Y.shape)"
    ]
   },
   {
@@ -402,9 +413,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -416,7 +427,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
